--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/start.js",
-    "elm": "elm-live ./Main.elm --output=./elm/js/app.js"
+    "elm": "elm-make ./Main.elm --output=./elm/js/app.js && npm start"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/finnhodgkin/learn-elm-authentication#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "env2": "^2.2.0",
     "hapi": "^16.5.2",
-    "inert": "^4.2.1"
+    "inert": "^4.2.1",
+    "pg": "^7.3.0",
+    "pg-promise": "^6.5.1"
   }
 }
