--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "env2": "^2.2.0",
     "hapi": "^16.5.2",
     "inert": "^4.2.1",
+    "jsonwebtoken": "^7.4.3",
     "pg": "^7.3.0",
-    "pg-promise": "^6.5.1"
+    "pg-promise": "^6.5.1",
+    "uuid": "^3.1.0"
   }
 }
